--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 </head>
 <body>
-<p><H2><center>Bahatsi Liliane catete</center></H2></P>
+<p><H2><center>Bahatsi Liliane ccatete</center></H2></P>
 <img src="C:\Users\user\Desktop\g.jpg" width="100">
 </body>
 </html>
