--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 </head>
 <body>
-<p><H2><center>Bahatsi Liliane catete</center></H2></P>
+<p><H2><center>Bahatsi Liliane atete</center></H2></P>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ3L9XIFsD6XyrboBCVNkeA5FfUaZ8obCLhtcA6cMoXq5XBqNQn" width="100">
 </body>
 </html>
