--- a/index.html
+++ b/index.html
@@ -2,6 +2,19 @@
 <html lang="en">
 <head>
 <title>My site</title>
+  <style type="css/style">
+  
+  <div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#about">About</a>
+  <a href="#contact">Contact</a>
+  <input type="text" placeholder="Search..">
+</div>
+  
+  
+  
+         </style>
+         
 <meta charset="utf-8">
 </head>
 <body>
