--- a/index.html
+++ b/index.html
@@ -84,6 +84,17 @@ body {
 <meta charset="utf-8">
 </head>
 <body>
+  <div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#about">About</a>
+  <a href="#contact">Contact</a>
+  <div class="search-container">
+    <form action="/action_page.php">
+      <input type="text" placeholder="Search.." name="search">
+      <button type="submit"><i class="fa fa-search"></i></button>
+    </form>
+  </div>
+</div>
 
 <p><H2><center>Bahatsi Liliane atete</center></H2></P>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ3L9XIFsD6XyrboBCVNkeA5FfUaZ8obCLhtcA6cMoXq5XBqNQn" width="100">
