--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ body {
   </div>
 </div>
 
-<p><H2><center>Bahatsi Liliane atete</center></H2></P>
+<p><H2><center>Bahatsi diliane atete</center></H2></P>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ3L9XIFsD6XyrboBCVNkeA5FfUaZ8obCLhtcA6cMoXq5XBqNQn" width="100">
 
 </body>
