--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
 <head>
 <title>My site</title>
 <meta charset="utf-8">
+  <style type="css/text">
+  
+  
+  
+  </style>
 </head>
 <body>
-<p><H2><center>Bahatsi liliane atete</center></H2></P>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ3L9XIFsD6XyrboBCVNkeA5FfUaZ8obCLhtcA6cMoXq5XBqNQn" width="100">
+<ul>
+  <li>HOME</li>
+  <li>VIDEO</li>
+  <li>IMAGES/li>
+  <li>CONTACTS</li>
+  <li>LOGIN</li>
+  </ul>
+    
 
 </body>
 </html>
