--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@ box-sizing: border-box;
       border-radius:3px;
     
     }
+    .searchbox {  
+float: left;  
+}  
+input[type=text] {  
+padding: 6px;  
+margin-top: 8px;  
+font-size: 17px;  
+border: none;  
+}  
   
  
     
@@ -65,6 +74,12 @@ box-sizing: border-box;
   <li><A href="login.html">LOGIN</a></li>
   </ul>
   </div>
+  <div class="searchbox">  
+<form>   
+<input type="text" placeholder=" Search...." name="search">   
+<button type="submit">Submit</button>   
+</form>  
+</div>   
 
 </body>
 </html>
