--- a/index.html
+++ b/index.html
@@ -57,8 +57,19 @@ margin-top: 8px;
 font-size: 17px;  
 border: none;  
 }  
+  .searchbox button {  
   
- 
+padding: 8px;  
+margin-top: 10px;  
+margin-left: 10px;  
+background: orange;  
+font-size: 20px;  
+border: none;  
+cursor: pointer;  
+}  
+ .searchbox button:hover {  
+background: blue;  
+} 
     
   
   
@@ -77,7 +88,7 @@ border: none;
   <div class="searchbox">  
 <form>   
 <input type="text" placeholder=" Search...." name="search">   
-<button type="submit">Submit</button>   
+<button type="submit">search</button>   
 </form>  
 </div>   
 
