--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@ border: none;
 padding: 8px;  
 margin-top: 10px;  
 margin-left: 10px;  
-background: orange;  
+background: #fff;  
 font-size: 20px;  
 border: none;  
 cursor: pointer;  
 }  
  .searchbox button:hover {  
-background: blue;  
+background: #fff;  
 } 
     
   
