--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ input[type=text] {
 padding: 6px;  
 margin-top: 8px;  
 font-size: 17px;  
-border: none;  
+border: solid;  
 }  
   .searchbox button {  
   
@@ -64,7 +64,7 @@ margin-top: 10px;
 margin-left: 10px;  
 background: #fff;  
 font-size: 20px;  
-border: none;  
+border: solid;  
 cursor: pointer;  
 }  
  .searchbox button:hover {  
