--- a/index.html
+++ b/index.html
@@ -91,6 +91,6 @@ background: #fff;
 <button type="submit">search</button>   
 </form>  
 </div>   
-
+  <h2><center>INTERTAINMENT MEDIA</center></h2>
 </body>
 </html>
