--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@ input[type=text] {
 padding: 6px;  
 margin-top: 8px;  
 font-size: 17px;  
-border: solid;  
+border: solid;
+  border-radius:2px;
 }  
   .searchbox button {  
   
@@ -64,12 +65,18 @@ margin-top: 10px;
 margin-left: 10px;  
 background: #fff;  
 font-size: 20px;  
-border: solid;  
+border: solid;
+    border-radius:2px;
 cursor: pointer;  
 }  
  .searchbox button:hover {  
 background: #fff;  
 } 
+ .gol{
+   font-size:100px;
+   font-family:time new roman;
+    }
+
     
   
   
@@ -90,7 +97,9 @@ background: #fff;
 <input type="text" placeholder=" Search...." name="search">   
 <button type="submit">search</button>   
 </form>  
-</div>   
+</div>
+  <div class="gol">
   <h2><center>INTERTAINMENT MEDIA</center></h2>
+  </div>
 </body>
 </html>
