--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@ cursor: pointer;
 background: #fff;  
 } 
  .gol{
-   font-size:100px;
-   font-family:time new roman;
+   font-size:50px;
+   font-family:statistic;
     }
 
     
