--- a/index.html
+++ b/index.html
@@ -76,6 +76,27 @@ background: #fff;
    font-size:50px;
    font-family:time new roman ;
     }
+    .icon-bar {
+  width: 90px;
+  background-color: #555;
+}
+
+.icon-bar a {
+  display: block;
+  text-align: center;
+  padding: 16px;
+  transition: all 0.3s ease;
+  color: white;
+  font-size: 36px;
+}
+
+.icon-bar a:hover {
+  background-color: #000;
+}
+
+.active {
+  background-color: #04AA6D;
+}
 
     
   
@@ -102,5 +123,12 @@ background: #fff;
   <div class="gol">
   <h2><center>INTERTAINMENT MEDIA</center></h2>
   </div>
+  <div class="icon-bar">
+  <a class="active" href="#"><i class="fa fa-home"></i></a> 
+  <a href="#"><i class="fa fa-search"></i></a> 
+  <a href="#"><i class="fa fa-envelope"></i></a> 
+  <a href="#"><i class="fa fa-globe"></i></a>
+  <a href="#"><i class="fa fa-trash"></i></a> 
+</div>
 </body>
 </html>
