--- a/index.html
+++ b/index.html
@@ -97,7 +97,10 @@ background: #fff;
 .active {
   background-color: #04AA6D;
 }
-
+  
+body {
+  background-image: url(https://thumbs.dreamstime.com/z/entertainment-folder-22902142.jpg);
+}
     
   
   
