--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ margin-top: 8px;
 font-size: 17px;  
 border: solid;
   border-radius:2px;
+  border-color: lightblue;
 }  
   .searchbox button {  
   
@@ -67,6 +68,7 @@ background: #fff;
 font-size: 20px;  
 border: solid;
     border-radius:2px;
+    border-color: lightblue;
 cursor: pointer;  
 }  
  .searchbox button:hover {  
@@ -100,6 +102,7 @@ background: #fff;
   
 body {
   background-image: url(https://thumbs.dreamstime.com/z/entertainment-folder-22902142.jpg);
+  background-size: cover;
 }
     
   
