--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@ body {
   </div>
   <div class="icon-bar">
   <a class="active" href="#"><i class="fa fa-home"></i></a> 
-  <a href="#"><i class="fa fa-search"></i></a> 
-  <a href="#"><i class="fa fa-envelope"></i></a> 
-  <a href="#"><i class="fa fa-globe"></i></a>
+  <a href="#"><i class="fa fa-videos"></i></a> 
+  <a href="#"><i class="fa fa-contacts"></i></a> 
+  <a href="#"><i class="fa fa-images"></i></a>
   <a href="#"><i class="fa fa-trash"></i></a> 
 </div>
 </body>
