--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ body {
   <div class="searchbox">  
 <form>   
 <input type="text" placeholder=" Search...." name="search">   
-<button type="submit">search</button>   
+<button type="submit"><a href="#"><i class="fa fa-search"></i></a> </button>   
 </form>  
 </div>
   <div class="gol">
