--- a/index.html
+++ b/index.html
@@ -82,24 +82,7 @@ background: #fff;
   width: 90px;
   background-color: #555;
 }
-body {margin:0}
 
-.icon-bar a {
-  display: block;
-  text-align: center;
-  padding: 16px;
-  transition: all 0.3s ease;
-  color: white;
-  font-size: 36px;
-}
-
-.icon-bar a:hover {
-  background-color: #000;
-}
-
-.active {
-  background-color: #04AA6D;
-}
   
 body {
   background-image: url(https://thumbs.dreamstime.com/z/entertainment-folder-22902142.jpg);
@@ -124,18 +107,14 @@ body {
   <div class="searchbox">  
 <form>   
 <input type="text" placeholder=" Search...." name="search">   
-<button type="submit"><a href="#"><i class="fa fa-search"></i></a> </button>   
+<button type="submit">search</button>   
 </form>  
 </div>
   <div class="gol">
   <h2><center>INTERTAINMENT MEDIA</center></h2>
   </div>
-  <div class="icon-bar">
-  <a class="active" href="#"><i class="fa fa-home"></i></a> 
-  <a href="#"><i class="fa fa-videos"></i></a> 
+ 
   <a href="#"><i class="fa fa-contacts"></i></a> 
-  <a href="#"><i class="fa fa-images"></i></a>
-  <a href="#"><i class="fa fa-trash"></i></a> 
-</div>
+  
 </body>
 </html>
