--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@ body {
 <body>
   <div class="nav">
 <ul>
+  <img src="https://www.topsearch.co/">
   <li class="active"><A href="home.html">HOME</a></li>
   <li><A href="video.html">VIDEO</a></li>
   <li><A href="images.html">IMAGES</a></li>
