--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@ body {
   <h2><center>INTERTAINMENT MEDIA</center></h2>
   </div>
  
-  <a href="#"><i class="fa fa-contacts"></i></a> 
+  
+  <a href="https://www.w3schools.com/">Visit W3Schools.com!</a>
   
 </body>
 </html>
