--- a/index.html
+++ b/index.html
@@ -115,10 +115,8 @@ body {
   <h2><center>INTERTAINMENT MEDIA</center></h2>
   </div>
  
-  
-  <a href="
-Wikipediahttps://www.wikipedia.org
-">Visit W3Schools.com!</a>
+   <a href="https://www.youtube.com/ 
+"</a>
   
 </body>
 </html>
