--- a/index.html
+++ b/index.html
@@ -122,7 +122,31 @@ body {
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   &nbsp;
-  <p>hello</p>
+  <p>In the early days of TV, there were often dramas on during the day. Back in those days, it
+was traditional for the husband to go out to work and for the wife to stay at home and look
+after the house and the children. Most of these daytime dramas were aimed at entertaining
+the housewives who would traditionally be at home, probably doing the washing.
+Companies selling washing powder would advertise their products at times when these
+dramas were on, and sometimes those companies would even sponsor the drama. Hence
+the word ‘soap’.
+So what about the word opera? Well, that’s because these dramas are often an exaggeration
+of real life. They are supposed to represent ordinary lives but, to make them entertaining, lots
+of dramatic events, like murders, divorces, affairs etc., all happen probably much more
+regularly than they would in a normal neighbourhood.
+Most soap operas these days are shown in the evening. Each show will have several
+different storylines happening at once that continue over several shows. The same cast
+members will appear in every show, too.
+There are lots of different soaps on in the UK on different channels but there are three main
+popular ones. ‘Coronation Street’ has been on since 1960. It is set in a suburb of Manchester
+and it’s supposed to represent working class life in the north of England. Then there’s
+‘Eastenders’ which started in 1985, set in the East End of London, and ‘Emmerdale’, which is
+set on a farm in Yorkshire, in the north of England.
+ (adapted from ww.bbc.co.uk) 
+VOCABULARY EXERCI</p>
 </body>
 </html>
