--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ body {
 "</a>
  <p><a href="https://www.google.com/">Google</a></p>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;b>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -127,7 +127,7 @@ body {
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   &nbsp;
-  <p>In the early days of TV, there were often dramas on during the day. Back in those days, it
+  <p>b>In the early days of TV, there were often dramas on during the day. Back in those days, it
 was traditional for the husband to go out to work and for the wife to stay at home and look
 after the house and the children. Most of these daytime dramas were aimed at entertaining
 the housewives who would traditionally be at home, probably doing the washing.
@@ -147,6 +147,6 @@ and it’s supposed to represent working class life in the north of England. The
 ‘Eastenders’ which started in 1985, set in the East End of London, and ‘Emmerdale’, which is
 set on a farm in Yorkshire, in the north of England.
  (adapted from ww.bbc.co.uk) 
-VOCABULARY EXERCI</p>
+    VOCABULARY </b></p>
 </body>
 </html>
