--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ body {
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   &nbsp;
-  <p>b>In the early days of TV, there were often dramas on during the day. Back in those days, it
+  <p><b>In the early days of TV, there were often dramas on during the day. Back in those days, it
 was traditional for the husband to go out to work and for the wife to stay at home and look
 after the house and the children. Most of these daytime dramas were aimed at entertaining
 the housewives who would traditionally be at home, probably doing the washing.
