--- a/index.html
+++ b/index.html
@@ -146,7 +146,37 @@ popular ones. ‘Coronation Street’ has been on since 1960. It is set in a sub
 and it’s supposed to represent working class life in the north of England. Then there’s
 ‘Eastenders’ which started in 1985, set in the East End of London, and ‘Emmerdale’, which is
 set on a farm in Yorkshire, in the north of England.
+ (adaptmembers will appear in every show, too.
+There are lots of different soaps on in the UK on different channels but there are three main
+popular ones. ‘Coronation Street’ has been on since 1960. It is set in a suburb of Manchester
+and it’s supposed to represent working class life in the north of England. Then there’s
+‘Eastenders’ which started in 1985, set in the East End of London, and ‘Emmerdale’, which is
+set on a farm in Yorkshire, in the north of England.
  (adapted from ww.bbc.co.uk) 
     VOCABULARY </b></p>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
+  &nbsp;
+<p>set on a farm in Yorkshire, in the north of England.
+ (adaptmembers will appear in every show, too.
+There are lots of different soaps on in the UK on different channels but there are three main
+popular ones. ‘Coronation Street’ has been on since 1960. It is set in a suburb of Manchester
+and it’s supposed to represent working class life in the north of England. Then there’s
+‘Eastenders’ which started in 1985, set in the East End of London, and ‘Emmerdale’, which is
+  set on a farm</p>
 </body>
 </html>
