--- a/index.html
+++ b/index.html
@@ -127,21 +127,21 @@ body {
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   &nbsp;
-  <p><b>In the early days of TV, there were often dramas on during the day. Back in those days, it
-was traditional for the husband to go out to work and for the wife to stay at home and look
-after the house and the children. Most of these daytime dramas were aimed at entertaining
-the housewives who would traditionally be at home, probably doing the washing.
-Companies selling washing powder would advertise their products at times when these
-dramas were on, and sometimes those companies would even sponsor the drama. Hence
-the word ‘soap’.
-So what about the word opera? Well, that’s because these dramas are often an exaggeration
-of real life. They are supposed to represent ordinary lives but, to make them entertaining, lots
-of dramatic events, like murders, divorces, affairs etc., all happen probably much more
-regularly than they would in a normal neighbourhood.
-Most soap operas these days are shown in the evening. Each show will have several
-different storylines happening at once that continue over several shows. The same cast
-members will appear in every show, too.
-There are lots of different soaps on in the UK on different channels but there are three main
+  <p><b>In the early days of TV, there were often dramas on during the day. Back in those days, it</br>
+    was traditional for the husband to go out to work and for the wife to stay at home and look</br>
+  after the house and the children. Most of these daytime dramas were aimed at entertaining</br>
+the housewives who would traditionally be at home, probably doing the washing.</br>
+Companies selling washing powder would advertise their products at times when these</br>
+dramas were on, and sometimes those companies would even sponsor the drama. Hence</br>
+the word ‘soap’.</br>
+So what about the word opera? Well, that’s because these dramas are often an exaggeration</br>
+of real life. They are supposed to represent ordinary lives but, to make them entertaining, lots</br>
+of dramatic events, like murders, divorces, affairs etc., all happen probably much more</br>
+regularly than they would in a normal neighbourhood.</br>
+Most soap operas these days are shown in the evening. Each show will have several</br>
+different storylines happening at once that continue over several shows. The same cast</br>
+members will appear in every show, too.</br>
+There are lots of different soaps on in the UK on different channels but there are three main</br>
 popular ones. ‘Coronation Street’ has been on since 1960. It is set in a suburb of Manchester
 and it’s supposed to represent working class life in the north of England. Then there’s
 ‘Eastenders’ which started in 1985, set in the East End of London, and ‘Emmerdale’, which is
@@ -171,12 +171,12 @@ set on a farm in Yorkshire, in the north of England.
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
   &nbsp;
-<p>set on a farm in Yorkshire, in the north of England.
- (adaptmembers will appear in every show, too.
-There are lots of different soaps on in the UK on different channels but there are three main
-popular ones. ‘Coronation Street’ has been on since 1960. It is set in a suburb of Manchester
-and it’s supposed to represent working class life in the north of England. Then there’s
-‘Eastenders’ which started in 1985, set in the East End of London, and ‘Emmerdale’, which is
-  set on a farm</p>
+<p><b>set on a farm in Yorkshire, in the north of England.</br>
+(adaptmembers will appear in every show, too.</br>
+There are lots of different soaps on in the UK on different channels but there are three main</br>
+popular ones. ‘Coronation Street’ has been on since 1960. It is set in a suburb of Manchester</br>
+and it’s supposed to represent working class life in the north of England. Then there’s</br>
+‘Eastenders’ which started in 1985, set in the East End of London, and ‘Emmerdale’, which is</br>
+set on a farm</br></b></p>
 </body>
 </html>
