--- a/index.html
+++ b/index.html
@@ -96,8 +96,15 @@ body {
 <body>
   <div class="nav">
 <ul>
-  <img src="https://www.topsearch.co/">
+ 
   <li class="active"><A href="home.html">HOME</a></li>
+  <li>home
+    <ul class="sub-nav">
+      <li>links</li>
+      <li>others</li>
+      <li>menu</li>
+    </ul>
+  </li>
   <li><A href="video.html">VIDEO</a></li>
   <li><A href="images.html">IMAGES</a></li>
   <li><A href="contact.html">CONTACTS</a></li>
