--- a/index.html
+++ b/index.html
@@ -89,7 +89,14 @@ body {
   background-size: cover;
 }
     
-  
+  .active .nav ul li ul.sub-nav{
+    position: absolute;
+    background: lightblue;
+    width: 100px;
+    height:250px;
+    top:75px;
+    left:0;
+    }
   
   </style>
 </head>
