--- a/index.html
+++ b/index.html
@@ -89,15 +89,16 @@ body {
   background-size: cover;
 }
     
-  .active .nav ul li ul.sub-nav{
+  .active nav ul li ul.sub-nav{
     position: absolute;
     background: lightblue;
     width: 100px;
     height:250px;
     top:75px;
     left:0;
+    display: none;
     }
-  .active .nav ul li ul.sub-nav li
+  .active nav ul li ul.sub-nav li
     {
       color:lightblue;
       font-size:14px;
@@ -105,7 +106,7 @@ body {
       padding:15px 0;
     }
     
-    .active .nav ul li ul.sub-nav li:hover{
+    .active nav ul li ul.sub-nav li:hover{
       color:blue;
       box-shadow: lightblue;
     }
