--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ body {
   <div class="nav">
 <ul>
  
-  <li class="active"><A href="home.html">HOME</a></li>
+  <li class="active">HOME</a></li>
   <li>home
     <ul class="sub-nav">
       <li>links</li>
@@ -127,10 +127,10 @@ body {
       <li>menu</li>
     </ul>
   </li>
-  <li><A href="video.html">VIDEO</a></li>
-  <li><A href="images.html">IMAGES</a></li>
-  <li><A href="contact.html">CONTACTS</a></li>
-  <li><A href="login.html">LOGIN</a></li>
+  <li>VIDEO</li>
+  <li>IMAGES</li>
+  <li>CONTACTS</li>
+  <li>LOGIN</li>
   <i class="glyphicon glyphicon-thumbs-up"></i>
   </ul>
   </div>
