--- a/index.html
+++ b/index.html
@@ -181,14 +181,12 @@ set on a farm</br></b></p>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
   &nbsp;
-<div class="w3-container">
-  <h2>Displaying Quotes</h2>
-  <p>The w3-panel class can be used to display quotes:</p>
 
-  <div class="w3-panel w3-leftbar w3-green">
+<div class="w3-container">
+
+  <div class="w3-panel w3-leftbar w3-light-grey">
     <p class="w3-xlarge w3-serif"><i>"Make it as simple as possible, but not simpler."</i></p>
     <p>Albert Einstein</p>
   </div>
-</div>
 </body>
 </html>
