--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
-  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <title>My site</title>
-<meta charset="utf-8">
+<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1" >
   <style type="text/css">
     .nav
     {
@@ -150,19 +150,19 @@ body {
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   &nbsp;
-  <p><b>In the early days of TV, there were often dramas on during the day. Back in those days, it</br>
-    was traditional for the husband to go out to work and for the wife to stay at home and look</br>
-  after the house and the children. Most of these daytime dramas were aimed at entertaining</br>
-the housewives who would traditionally be at home, probably doing the washing.</br>
-Companies selling washing powder would advertise their products at times when these</br>
-dramas were on, and sometimes those companies would even sponsor the drama. Hence</br>
+  <p><b>In the early days of TV,  Back in those days, it</br>
+    was traditional for the husband to  and look</br>
+  after the house and the children.  aimed at entertaining</br>
+the housewives who wouldthe washing.</br>
+Companies selling washing powder would advertise their  when these</br>
+dramas were on, and sometimes those c the drama. Hence</br>
 the word ‘soap’.</br>
-So what about the word opera? Well, that’s because these dramas are often an exaggeration</br>
-of real life. They are supposed to represent ordinary lives but, to make them entertaining, lots</br>
-of dramatic events, like murders, divorces, affairs etc., all happen probably much more</br>
+So what about the word opera? Well, exaggeration</br>
+of real life. They are supposed to  them entertaining, lots</br>
+of dramatic events, probably much more</br>
 regularly than they would in a normal neighbourhood.</br>
-Most soap operas these days are shown in the evening. Each show will have several</br>
-different storylines happening at once that continue over several shows. The same cast</br>
+Most soap operasg. Each show will have several</br>
+different storylines  several shows. The same cast</br>
 members will appear in every show, too.</br>
 </b></p>
 
@@ -190,10 +190,10 @@ members will appear in every show, too.</br>
   &nbsp;
 <p><b>set on a farm in Yorkshire, in the north of England.</br>
 (adaptmembers will appear in every show, too.</br>
-There are lots of different soaps on in the UK on different channels but there are three main</br>
-popular ones. ‘Coronation Street’ has been on since 1960. It is set in a suburb of Manchester</br>
-and it’s supposed to represent working class life in the north of England. Then there’s</br>
-‘Eastenders’ which started in 1985, set in the East End of London, and ‘Emmerdale’, which is</br>
+There are lots of different soaps  but there are three main</br>
+popular ones. ‘Coronation Street’ in a suburb of Manchester</br>
+and it’s supposed to represent workin England. Then there’s</br>
+‘Eastenders’ which started in 1985,, and ‘Emmerdale’, which is</br>
 set on a farm</br></b></p>
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
