--- a/index.html
+++ b/index.html
@@ -111,7 +111,10 @@ body {
   background: #55ACEE;
   color: white;
 }
- 
+ .fa-instagram {
+  background: #125688;
+  color: white;
+}
    
   </style>
 </head>
@@ -121,9 +124,9 @@ body {
  
   <li class="active">HOME</a></li>
   <li>VIDEO</li>
-  <li>IMAGES</li>
-  <li>CONTACTS</li>
-  <li>LOGIN</li>
+  <li><a href="images">IMAGES</a></li>
+  <li><a href="contact">CONTACTS</a></li>
+  <li><a herf="login">LOGIN</a></li>
   
   </ul>
   </div>
@@ -170,7 +173,7 @@ members will appear in every show, too.</br>
 <!-- Add font awesome icons -->
 <a href="#" class="fa fa-facebook"></a>
 <a href="#" class="fa fa-twitter"></a
-  
+  <a href="#" class="fa fa-instagram"></a>
   
   >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b>
