--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@ body {
  
   <li class="active">HOME</a></li>
   <li>VIDEO</li>
-  <li><a href="images">IMAGES</a></li>
-  <li><a href="contact">CONTACTS</a></li>
-  <li><a herf="login">LOGIN</a></li>
+  <li><a href="#">IMAGES</a></li>
+  <li><a href="#">CONTACTS</a></li>
+  <li><a herf="#">LOGIN</a></li>
   
   </ul>
   </div>
