--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@ body {
   <div class="nav">
 <ul>
  
-  <li class="active">HOME</a></li>
-  <li>VIDEO</li>
+  <li class="active"><a herf="#">HOME</a></li>
+  <li><a herf="#">VIDEO</a></li>
   <li><a href="#">IMAGES</a></li>
   <li><a href="#">CONTACTS</a></li>
   <li><a herf="#">LOGIN</a></li>
