--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ body {
    bottom: 0;
    width: 100%;
    background-color: black;
-   color: white;
+   color: BLACK;
    text-align: center;
 }
   </style>
@@ -129,13 +129,11 @@ body {
 <body>
   <div class="nav">
 <ul>
- 
   <li class="active"><a herf="#">HOME</a></li>
   <li><a herf="#">VIDEO</a></li>
   <li><a href="#">IMAGES</a></li>
   <li><a href="#">CONTACTS</a></li>
   <li><a herf="#">LOGIN</a></li>
-  
   </ul>
   </div>
   <div class="searchbox">  
