--- a/index.html
+++ b/index.html
@@ -155,15 +155,14 @@ body {
   
   <!-- Right-aligned links -->
   <div class="topnav-right">
-    <a href="#search">Search</a>
+    <a href="#VIDEOS">VIDEOS</a>
     <a href="#about">About</a>
   </div>
   
 </div>
 
 <div style="padding-left:16px">
-  <h2>Responsive Top Navigation with Centered and Right-Aligned Links</h2>
-  <p>Resize the browser window to see the responsive effect.</p>
+  <p>GET WHAT YOU NEED..</p>
 </div>
   <div class="searchbox">  
 <form>   
