--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 .topnav {
   position: relative;
   overflow: hidden;
-  background-color: lightblue;
+  background-color: lightgreen;
 }
 
 .topnav a {
