--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 .topnav {
   position: relative;
   overflow: hidden;
-  background-color: lightgreen;
+  background-color: black;
 }
 
 .topnav a {
   float: left;
-  color: #f2f2f2;
+  color: lightblue;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
