--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 .topnav {
   position: relative;
   overflow: hidden;
-  background-color: black;
+  background-color: green;
 }
 
 .topnav a {
@@ -26,7 +26,7 @@
 }
 
 .topnav a:hover {
-  background-color: #ddd;
+  background-color: pink;
   color: black;
 }
 
