--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ body {
    left: 0;
    bottom: 0;
    width: 100%;
-   background-color: black;
+   background-color: green;
    color: BLACK;
    text-align: center;
 }
@@ -209,7 +209,7 @@ members will appear in every show, too.</br>
 <a href="#" class="fa fa-twitter"></a
 <a href="#" class="fa fa-instagram"></a>
   
-  >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
