--- a/index.html
+++ b/index.html
@@ -106,7 +106,9 @@ body {
   background-image: url(https://images.unsplash.com/photo-1567653418876-5bb0e566e1c2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxjb2xsZWN0aW9uLXBhZ2V8MXwxMTAzMDg4fHxlbnwwfHx8fA%3D%3D&w=1000&q=80);
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-position: bottom; 
+  background-size: bottom; 
+    width: 15px;
+    height:15px;
 }  
    .fa {
   padding: 20px;
