--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ set on a farm</br></b></p>
 <!-- The four columns -->
 <div class="row">
   <div class="column">
-    <img src="img_nature.jpg" alt="Nature" style="width:100%" onclick="myFunction(this);">
+    <img src="https://www.bet.com/celebrities/news/2020/12/08/top-actors-of-2020-the-bet-100/_jcr_content/image.medium2x1image.dimg/__1607368481851__1607100412794/120820-celebs-BET100-Actors.jpg" alt="OMG" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
     <img src="img_snow.jpg" alt="Snow" style="width:100%" onclick="myFunction(this);">
