--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ body {
 .column {
   float: left;
   width: 25%;
-  padding: 10px;
+  padding: 7px;
 }
 
 /* Style the images inside the grid */
@@ -172,8 +172,8 @@ body {
 /* Expanding image text */
 #imgtext {
   position: absolute;
-  bottom: 15px;
-  left: 15px;
+  bottom: 7px;
+  left: 7px;
   color: white;
   font-size: 20px;
 }
@@ -181,8 +181,8 @@ body {
 /* Closable button inside the expanded image */
 .closebtn {
   position: absolute;
-  top: 10px;
-  right: 15px;
+  top: 6px;
+  right: 7px;
   color: white;
   font-size: 35px;
   cursor: pointer;
@@ -301,8 +301,8 @@ set on a farm</br></b></p>
   &nbsp;
 
 <div style="text-align:center">
-  <h2>Tabbed Image Gallery</h2>
-  <p>Click on the images below:</p>
+  <h2>PHOTOS</h2>
+  <p><H2>CLICK ON ANY IMAGE:</H2></p>
 </div>
 
 <!-- The four columns -->
