--- a/index.html
+++ b/index.html
@@ -102,7 +102,12 @@ body {
   background-image: url(https://thumbs.dreamstime.com/z/entertainment-folder-22902142.jpg);
   background-size: cover;
 }
- 
+ body {
+  background-image: url(https://wallpaperaccess.com/full/731629.jpg);
+  background-repeat: no-repeat;
+  background-size: 80px;
+  background-position: BOTTOM;
+}
    .fa {
   padding: 20px;
   font-size: 30px;
