--- a/index.html
+++ b/index.html
@@ -100,13 +100,15 @@ background: #fff;
   
 body {
   background-image: url(https://thumbs.dreamstime.com/z/entertainment-folder-22902142.jpg);
-  background-size: cover;
+  background-size: 280px;
+  background-size: 50%;
 }
  body {
   background-image: url(https://wallpaperaccess.com/full/731629.jpg);
   background-repeat: no-repeat;
-  background-size: 80px;
+  background-size: 280px;
   background-position: BOTTOM;
+  background -size: 50%;
 }
    .fa {
   padding: 20px;
