--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ background: #fff;
   
 body {
   background-image: url(https://thumbs.dreamstime.com/z/entertainment-folder-22902142.jpg);
-  background-size: 50%;
+  background-size: cover;
  
 }
  body {
