--- a/index.html
+++ b/index.html
@@ -188,6 +188,29 @@ body {
   font-size: 35px;
   cursor: pointer;
 } 
+  . gol{
+    body {
+  background-color: black;
+  font-family: cursive;
+}
+
+.glow {
+  font-size: 80px;
+  color: #fff;
+  text-align: center;
+  animation: glow 1s ease-in-out infinite alternate;
+}
+
+@-webkit-keyframes glow {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+  }
+  
+  to {
+    text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+  }
+}
+    }
  
   </style>
 </head>
@@ -302,8 +325,8 @@ set on a farm</br></b></p>
   &nbsp;
 
 <div style="text-align:center">
-  <h2>PHOTOS</h2>
-  <p><H2>CLICK ON ANY IMAGE:</H2></p>
+  <h2><B>PHOTOS</B></h2>
+  <p><H2><B>CLICK ON ANY IMAGE:</B></H2></p>
 </div>
 
 <!-- The four columns -->
