--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 }
 
 .topnav a.active {
-  background-color: #04AA6D;
+  background-color: pink;
   color: white;
 }
 
@@ -100,7 +100,7 @@ background: #fff;
   
 body {
   background-image: url(https://thumbs.dreamstime.com/z/entertainment-folder-22902142.jpg);
-  background-size: cover;
+  background-size: center;
  
 }
 
