--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@ background: #fff;
 body {
   background-image: url(https://thumbs.dreamstime.com/z/entertainment-folder-22902142.jpg);
   background-size: center;
+  background-repeat: no-repeat;
  
 }
 
