--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@ body {
   background-image: url(https://thumbs.dreamstime.com/z/entertainment-folder-22902142.jpg);
   background-size: center;
   background-repeat: no-repeat;
+  background-size: 300px 100px;
  
 }
 
