--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ body {
   background-image: url(https://thumbs.dreamstime.com/z/entertainment-folder-22902142.jpg);
   background-size: center;
   background-repeat: no-repeat;
-  background-size: 300px 100px;
+  background-size: 1300px 800px;
  
 }
 
@@ -208,7 +208,24 @@ body {
   }
 }
     }
- 
+ .dil {
+  font-size: 80px;
+  color: #fff;
+  text-align: center;
+  animation: glow 1s ease-in-out infinite alternate;
+}
+
+@-webkit-keyframes glow {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+  }
+  
+  to {
+    text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+  }
+}
+    }
+    
   </style>
 </head>
 <body>
@@ -321,7 +338,7 @@ set on a farm</br></b></p>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
   &nbsp;
 
-<div style="text-align:center">
+<div class="dil" style="text-align:center">
   <h2><B>PHOTOS</B></h2>
   <p><H2><B>CLICK ON ANY IMAGE:</B></H2></p>
 </div>
