--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ body {
   background-repeat: no-repeat;
 }
 
-   .fa {
+  .fa {
   padding: 20px;
   font-size: 30px;
   width: 50px;
@@ -126,11 +126,27 @@ body {
   background: #55ACEE;
   color: white;
 }
- .fa-instagram {
+
+.fa-google {
+  background: #dd4b39;
+  color: white;
+}
+
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
+
+.fa-youtube {
+  background: #bb0000;
+  color: white;
+}
+
+.fa-instagram {
   background: #125688;
   color: white;
 }
-  
+
    * {
   box-sizing: border-box;
 }
@@ -288,13 +304,7 @@ Most soap operasg. Each show will have several</br>
 different storylines  several shows. The same cast</br>
 members will appear in every show, too.</br>
 </b></p>
-
-
-<!-- Add font awesome icons -->
-<a href="#" class="fa fa-facebook"></a>
-<a href="#" class="fa fa-twitter"></a
-<a href="#" class="fa fa-instagram"></a>
-  
+ 
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
@@ -372,6 +382,12 @@ function myFunction(imgs) {
   expandImg.parentElement.style.display = "block";
 }
 </script>
-
+<!-- Add font awesome icons -->
+<a href="#" class="fa fa-facebook"></a>
+<a href="#" class="fa fa-twitter"></a>
+<a href="#" class="fa fa-google"></a>
+<a href="#" class="fa fa-linkedin"></a>
+<a href="#" class="fa fa-youtube"></a>
+<a href="#" class="fa fa-instagram"></a>
 </body>
 </html>
