--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@ body {
   font-size: 30px;
   width: 50px;
   text-align: center;
-  text-decoration: none;
-  margin: 5px 2px;
+  text-decoration: cicle;
+  margin: 50px 50px;
 }
 
 .fa:hover {
