--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ background: #fff;
 
   
 body {
-  background-image: url(https://thumbs.dreamstime.com/z/entertainment-folder-22902142.jpg);
+  background-image: url(https://dm0qx8t0i9gc9.cloudfront.net/watermarks/image/rDtN98Qoishumwih/abstract-musical-background-with-movie-entertainment-objects_SB_PM.jpg);
   background-size: center;
   background-repeat: no-repeat;
 }
